# daf-yomi-podcast

./: .env.example  .gitignore  README.md  feed.xml  publish.ps1  pyproject.toml
migrations/: 0001_init.sql
scripts/: inspect_amud.py  reconcile_ia.py  report_gaps.py
src/dafyomi/: cli.py  db.py  gematria.py  ia.py  meta.py  models.py  normalize.py  rss.py  scan.py  seasons.py  show_config.py
tests/: test_gematria.py  test_rss.py  test_scan.py  test_seasons.py
